--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -32,5 +32,5 @@ jobs:
         git config --global user.email "18280396+Lastorder-DC@users.noreply.github.com"
         git config --global user.name "Lastorder-DC BuildBot"
         git add dist
-        git commit -m "Update dist for ${{ github.head_ref }}"
+        git commit -m "[skip ci] Update dist for ${{ github.ref }}"
         git push
