--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -21,6 +21,10 @@ jobs:
       with:
         node-version: lts/dubnium
 
+    - name: Remove old dist folder
+      run: |
+        rm -rfv dist
+
     - name: Build
       run: |
         npm install
@@ -31,6 +35,6 @@ jobs:
       run: |
         git config --global user.email "18280396+Lastorder-DC@users.noreply.github.com"
         git config --global user.name "Lastorder-DC BuildBot"
-        git add dist
+        git add .
         git commit -m "[skip ci] Update dist for ${{ github.ref }}"
         git push
