--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "transfer.sh",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "moduleType": [
     "node"
   ],
@@ -13,13 +13,13 @@
     "tests"
   ],
   "dependencies": {
-    "videojs": "~7.13.3",
+    "videojs": "~8.16.1",
     "bootstrap": "~3.0.0",
-    "modernizr": "~2.6.2",
-    "uri.js": "~1.14.1",
+    "modernizr": "~3.5.0",
+    "uri.js": "~4.4.1",
     "typed.js": "https://github.com/mattboldt/typed.js.git",
     "realistic-typewriter.js": "https://github.com/fardjad/realistic-typewriter.js.git",
     "animate.less": "*",
-    "jquery-waypoints": "https://github.com/imakewebthings/jquery-waypoints.git#~2.0.5"
+    "waypoints": "~4.0.1"
   }
 }
